Fix - overflow and fixed header style

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,7 +5,6 @@
 
 body {
   margin: 0;
-  overflow-x: hidden;
 }
 
 html,
@@ -118,6 +117,7 @@ html {
 
 main {
   padding: 20px 10%;
+  overflow-x: hidden;
 }
 
 p,
@@ -133,10 +133,12 @@ li {
   font-size: 4rem;
   font-weight: 500;
   margin-bottom: 30px;
+
+  padding-top: 70px;
 }
 
 section {
-  padding: 30px 0;
+  padding: 15px 0;
 }
 
 
